@@ -7,10 +7,12 @@ import com.muteam.backend.dto.response.SeccionDTO;
 import com.muteam.backend.model.Articulo;
 import com.muteam.backend.model.Multimedia;
 import com.muteam.backend.model.Seccion;
+import com.muteam.backend.model.Usuario;
 import com.muteam.backend.repository.ArticuloRepository;
 import com.muteam.backend.repository.MultimediaRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
+import com.muteam.backend.repository.UsuarioRepository;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -18,26 +20,38 @@ import java.util.stream.Collectors;
 import com.muteam.backend.repository.SeccionRepository;
 
 @Service
-public class ArticuloService{
+public class ArticuloService {
     private final ArticuloRepository articuloRepository;
     private final SeccionRepository seccionRepository;
     private final MultimediaRepository multimediaRepository;
+    private final UsuarioRepository usuarioRepository;
 
-    public ArticuloService(ArticuloRepository articuloRepository, SeccionRepository seccionRepository, MultimediaRepository multimediaRepository) {
+    public ArticuloService(ArticuloRepository articuloRepository, SeccionRepository seccionRepository,
+            MultimediaRepository multimediaRepository, UsuarioRepository usuarioRepository) {
         this.articuloRepository = articuloRepository;
         this.seccionRepository = seccionRepository;
         this.multimediaRepository = multimediaRepository;
+        this.usuarioRepository = usuarioRepository;
     }
 
+    @Transactional
     public ArticuloDTO obtenerArticuloSeguro(Long articuloId, Integer nivelUsuario) {
 
         // 1. Obtener Entidad (DB)
         Articulo articulo = articuloRepository.findById(articuloId)
                 .orElseThrow(() -> new RuntimeException("Artículo con ID " + articuloId + " no existe"));
 
-        List<String> urlsGaleria = articulo.getGaleria().stream()
-                .map(Multimedia::getUrl)
-                .toList();
+        // 4. SANITIZAR GALERÍA (Quitar Proxies de Hibernate para que Jackson no falle)
+        List<Multimedia> galeria = articulo.getGaleria().stream()
+                .map(m -> {
+                    Multimedia copy = new Multimedia();
+                    copy.setId(m.getId());
+                    copy.setUrl(m.getUrl());
+                    copy.setTipo(m.getTipo());
+                    copy.setDescripcion(m.getDescripcion());
+                    return copy;
+                })
+                .collect(Collectors.toList());
 
         // 2. Obtener Secciones (DB)
         List<Seccion> seccionesEntity = seccionRepository.findByArticuloIdOrderByOrdenAsc(articuloId);
@@ -56,20 +70,22 @@ public class ArticuloService{
                         s.getTipo(),
                         s.getOrden(),
                         s.getCuerpo(),
-                        s.getMultimedia()
-                ))
+                        s.getMultimedia()))
                 .collect(Collectors.toList());
 
-        // 4. Armar el DTO Padre final
+        // 4. Buscar al Autor
+        Usuario autor = usuarioRepository.findById(articulo.getAutorId())
+                .orElseThrow(() -> new RuntimeException("Autor con ID " + articulo.getAutorId() + " no existe"));
+
+        // 5. Armar el DTO Padre final
         return new ArticuloDTO(
                 articulo.getId(),
                 articulo.getTitulo(),
                 articulo.getVistas(),
                 articulo.getFechaCreacion(),
-                "Autor ID " + articulo.getAutorId(),
-                urlsGaleria,
-                seccionesDTO
-        );
+                autor.getUsername(),
+                galeria,
+                seccionesDTO);
     }
 
     public Seccion agregarSeccion(Long articuloId, SeccionRequest nuevaSeccionRequest) {
@@ -99,7 +115,10 @@ public class ArticuloService{
                 if (nuevaSeccionRequest.multimediaId() == null) {
                     throw new RuntimeException("Una sección multimedia debe tener un ID de archivo");
                 }
-                nuevaSeccion.setMultimedia(new Multimedia(nuevaSeccionRequest.multimediaId(), "", ""));
+                Multimedia media = multimediaRepository.findById(nuevaSeccionRequest.multimediaId())
+                        .orElseThrow(() -> new RuntimeException(
+                                "Multimedia no encontrado con ID: " + nuevaSeccionRequest.multimediaId()));
+                nuevaSeccion.setMultimedia(media);
                 nuevaSeccion.setCuerpo(null); // Limpiamos el texto para cumplir tu regla
                 break;
 
@@ -111,7 +130,8 @@ public class ArticuloService{
         nuevaSeccion.setNivel(nuevaSeccionRequest.nivel());
         nuevaSeccion.setArticulo(articulo); // <--- VINCULACIÓN CRÍTICA
 
-        // 3. Guardamos al Hijo (Usando el repo del hijo, pero dentro del servicio del padre)
+        // 3. Guardamos al Hijo (Usando el repo del hijo, pero dentro del servicio del
+        // padre)
         seccionRepository.save(nuevaSeccion);
         return nuevaSeccion;
     }
@@ -125,14 +145,16 @@ public class ArticuloService{
         articulo.setAutorId(usuarioId);
         articulo.setFechaCreacion(LocalDateTime.now());
         articulo.setTipo(request.tipo());
-        // Al hacer .save(), la base de datos genera el ID y lo pone en el objeto 'articulo'
+        // Al hacer .save(), la base de datos genera el ID y lo pone en el objeto
+        // 'articulo'
         articulo = articuloRepository.save(articulo);
 
         if (request.galeriaMultimediaIds() != null && !request.galeriaMultimediaIds().isEmpty()) {
             // Buscamos las fotos reales en la DB usando sus IDs
             List<Multimedia> fotosGaleria = multimediaRepository.findAllById(request.galeriaMultimediaIds());
 
-            // Asignamos la lista. Al tener @ManyToMany, JPA llenará la tabla intermedia solo.
+            // Asignamos la lista. Al tener @ManyToMany, JPA llenará la tabla intermedia
+            // solo.
             articulo.setGaleria(fotosGaleria);
 
             // Actualizamos el artículo para guardar las relaciones
@@ -148,6 +170,7 @@ public class ArticuloService{
                 seccion.setOrden(seccionReq.orden());
                 seccion.setNivel(seccionReq.nivel());
                 seccion.setTipo(seccionReq.tipo());
+                seccion.setTitulo(seccionReq.titulo());
 
                 // --- Lógica del Switch (Texto vs Multimedia) ---
                 if ("texto".equalsIgnoreCase(seccionReq.tipo())) {
@@ -162,7 +185,10 @@ public class ArticuloService{
                     if (seccionReq.multimediaId() == null) {
                         throw new RuntimeException("Falta el ID del archivo multimedia");
                     }
-                    seccion.setMultimedia(new Multimedia(seccionReq.multimediaId(), "", ""));
+                    Multimedia media = multimediaRepository.findById(seccionReq.multimediaId())
+                            .orElseThrow(() -> new RuntimeException(
+                                    "Multimedia no encontrado con ID: " + seccionReq.multimediaId()));
+                    seccion.setMultimedia(media);
                     seccion.setCuerpo(null); // Aseguramos limpieza
                 }
 
@@ -175,14 +201,83 @@ public class ArticuloService{
         // Retornamos un DTO simple o solo el ID
         return convertirADTO(articulo);
 
-    } // <--- AQUÍ TERMINA LA TRANSACCIÓN (Si llega aquí, hace COMMIT. Si falla antes, ROLLBACK)
+    } // <--- AQUÍ TERMINA LA TRANSACCIÓN (Si llega aquí, hace COMMIT. Si falla antes,
+      // ROLLBACK)
+
+    @Transactional
+    public ArticuloDTO actualizarHistoriaCompleta(Long articuloId, ArticuloRequest request, Long usuarioId) {
+        // 1. Buscar y Validar existencia
+        Articulo articulo = articuloRepository.findById(articuloId)
+                .orElseThrow(() -> new RuntimeException("Artículo no encontrado"));
+
+        // (Opcional: Verificar si el usuario tiene permiso, aunque eso suele ir en
+        // Controller/Security)
+
+        // 2. Actualizar Datos Básicos
+        articulo.setTitulo(request.titulo());
+        // articulo.setTipo(request.tipo()); // Generalmente el tipo no cambia, pero
+        // podrías permitirlo
+        articulo.setFechaActualizacion(LocalDateTime.now()); // Si tienes este campo (o reutilizas fechaCreacion si no)
+        // Nota: en tu modelo no vi fechaActualizacion explicito en Articulo.java
+        // original,
+        // pero es buena práctica. Si no existe, ignóralo o agrégalo.
+        // Voy a asumnir que NO existe y solo actualizo titulo.
+
+        // 3. Actualizar Galería
+        if (request.galeriaMultimediaIds() != null) {
+            List<Multimedia> nuevasFotos = multimediaRepository.findAllById(request.galeriaMultimediaIds());
+            articulo.setGaleria(nuevasFotos); // Reemplaza la lista anterior completamente
+        }
+
+        articuloRepository.save(articulo);
+
+        // 4. Actualizar Secciones (Estrategia: Borrar y Recrear)
+        // Primero borramos las viejas
+        seccionRepository.deleteAllByArticuloId(articuloId);
+        seccionRepository.flush(); // <--- FORZAR EL BORRADO INMEDIATO
+
+        // Insertamos las nuevas (si hay)
+        if (request.secciones() != null) {
+            for (SeccionRequest seccionReq : request.secciones()) {
+                Seccion seccion = new Seccion();
+                seccion.setArticulo(articulo);
+                seccion.setOrden(seccionReq.orden());
+                seccion.setNivel(seccionReq.nivel());
+                seccion.setTipo(seccionReq.tipo());
+                seccion.setTitulo(seccionReq.titulo());
+
+                if ("texto".equalsIgnoreCase(seccionReq.tipo())) {
+                    if (seccionReq.contenido() == null || seccionReq.contenido().isBlank()) {
+                        throw new RuntimeException("El texto no puede estar vacío");
+                    }
+                    seccion.setCuerpo(seccionReq.contenido());
+                } else {
+                    if (seccionReq.multimediaId() == null) {
+                        throw new RuntimeException("Falta el ID del archivo multimedia");
+                    }
+                    Multimedia media = multimediaRepository.findById(seccionReq.multimediaId())
+                            .orElseThrow(() -> new RuntimeException(
+                                    "Multimedia no encontrado con ID: " + seccionReq.multimediaId()));
+                    seccion.setMultimedia(media);
+                }
+                seccionRepository.save(seccion);
+            }
+        }
+
+        return convertirADTO(articulo);
+    }
 
     private ArticuloDTO convertirADTO(Articulo articulo) {
-        // 1. CONVERTIR GALERÍA (Lista de Objetos -> Lista de Strings)
-        // Usamos .stream() para recorrer la lista y extraer solo la URL de cada foto
-        List<String> urlsGaleria = articulo.getGaleria().stream()
-                .map(Multimedia::getUrl) // De cada objeto 'media', saca la url
-                .toList();
+        List<Multimedia> galeria = articulo.getGaleria().stream()
+                .map(m -> {
+                    Multimedia copy = new Multimedia();
+                    copy.setId(m.getId());
+                    copy.setUrl(m.getUrl());
+                    copy.setTipo(m.getTipo());
+                    copy.setDescripcion(m.getDescripcion());
+                    return copy;
+                })
+                .collect(Collectors.toList());
 
         // 2. CONVERTIR SECCIONES (Lista de Entidades -> Lista de DTOs)
         // Aquí transformamos cada pieza de LEGO interna en un DTO seguro
@@ -194,7 +289,7 @@ public class ArticuloService{
                         seccion.getTitulo(),
                         seccion.getTipo(),
                         seccion.getOrden(),
-                        seccion.getCuerpo(),      // Contenido de texto
+                        seccion.getCuerpo(), // Contenido de texto
                         seccion.getMultimedia()// url de la foto (si hay)
                 ))
                 .toList();
@@ -205,9 +300,8 @@ public class ArticuloService{
                 articulo.getVistas(),
                 articulo.getFechaCreacion(),
                 "Autor desconocido",
-                urlsGaleria,
-                seccionesDTO
-        );
+                galeria,
+                seccionesDTO);
     }
 
     public List<ArticuloDTO> obtenerTodosParaFeed() {
